--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,38 +19,33 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     
-    # Сборка Docker образа для бэкенда (из папки admin)
     - name: Build backend Docker image
       run: |
-        docker build -t backend-image ./admin
-        docker tag backend-image $GITHUB_REGISTRY_URL/backend-image:latest
+        docker build -t backend-image ./app/backend
+        docker tag backend-image ghcr.io/F4aming/backend-image:latest  # Правильный формат тега
 
-    # Сборка Docker образа для фронтенда (из папки apache)
     - name: Build frontend Docker image
       run: |
-        docker build -t frontend-image ./apache
-        docker tag frontend-image $GITHUB_REGISTRY_URL/frontend-image:latest
+        docker build -t frontend-image ./public
+        docker tag frontend-image ghcr.io/F4aming/frontend-image:latest  # Правильный формат тега
 
-    # Логин в GitHub Container Registry
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    # Публикация Docker образов
     - name: Push Docker images
       run: |
-        docker push $GITHUB_REGISTRY_URL/backend-image:latest
-        docker push $GITHUB_REGISTRY_URL/frontend-image:latest
+        docker push ghcr.io/F4aming/backend-image:latest  # Правильный путь
+        docker push ghcr.io/F4aming/frontend-image:latest  # Правильный путь
 
-    # Деплой на продакшн сервер
     - name: Deploy to Production
       run: |
-        # Пример деплоя на сервер через SSH
+        # Пример деплоя через SSH
         ssh -o StrictHostKeyChecking=no user@yourserver.com << 'EOF'
-          docker pull $GITHUB_REGISTRY_URL/backend-image:latest
-          docker pull $GITHUB_REGISTRY_URL/frontend-image:latest
+          docker pull ghcr.io/F4aming/backend-image:latest
+          docker pull ghcr.io/F4aming/frontend-image:latest
           docker-compose down
           docker-compose up -d
         EOF
