--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,8 +33,8 @@ jobs:
         run: |
           docker-compose ps
 
-  # Первый этап тестирования
-  test-job-1:
+  # Этап тестирования
+  test-job:
     runs-on: ubuntu-latest
     needs: build-job  # Этот шаг выполняется только после успешного завершения build-job
 
@@ -49,30 +49,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y docker-compose
-
-
-  # Второй этап тестирования
-  test-job-2:
-    runs-on: ubuntu-latest
-    needs: test-job-1  # Этот шаг выполняется только после успешного завершения test-job-1
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Install Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
           
   # Этап деплоя
   deploy-job:
     runs-on: ubuntu-latest
-    needs: test-job-2  # Этот шаг выполняется только после успешного завершения test-job-2
+    needs: test-job  # Этот шаг выполняется только после успешного завершения test-job
 
     steps:
       - name: Checkout code
@@ -90,4 +71,4 @@ jobs:
         run: |
           echo "Starting deployment..."
           sleep 2
-          echo "Deployment completed successfully!"
+          echo "deployment completed successfully!"
